_UNITTEST/_TEMP/test_03_echo_advanced_output.txt
# ============================================================================
# Test completed at: 2025-11-09 01:23:03 - Status: FAIL
# ============================================================================

test_03_echo_advanced (test_gds.GDSTest)
测试echo的正确JSON语法（修复后的功能） ... FAIL

======================================================================
FAIL: test_03_echo_advanced (test_gds.GDSTest)
测试echo的正确JSON语法（修复后的功能）
----------------------------------------------------------------------
Traceback (most recent call last):
  File "/Users/wukunhuan/.local/bin/_UNITTEST/test_gds.py", line 837, in gds
    self.assertEqual(result.returncode, 0, f"命令执行失败")
  File "/Library/Developer/CommandLineTools/Library/Frameworks/Python3.framework/Versions/3.9/lib/python3.9/unittest/case.py", line 831, in assertEqual
    assertion_func(first, second, msg=msg)
AssertionError: 1 != 0 : 命令执行失败

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "/Users/wukunhuan/.local/bin/_UNITTEST/test_gds.py", line 1728, in test_03_echo_advanced
    result = self.gds('python ' + test_script)
  File "/Users/wukunhuan/.local/bin/_UNITTEST/test_gds.py", line 843, in gds
    self.fail(f'命令执行异常: {command} - {e}')
AssertionError: 命令执行异常: python ~/tmp/gds_test_20251109_011825_687318_37f53dba/test_script.py - 1 != 0 : 命令执行失败

----------------------------------------------------------------------
Ran 1 test in 273.567s

FAILED (failures=1)
设置GDS全面测试环境...
远端测试目录: ~/tmp/gds_test_20251109_011825_687318_37f53dba
正在创建远端测试目录: ~/tmp/gds_test_20251109_011825_687318_37f53dba
使用测试模式，窗口将只显示复制指令和执行完成按钮
已切换到远端测试目录: ~/tmp/gds_test_20251109_011825_687318_37f53dba
✓ 验证测试目录存在: ~/tmp/gds_test_20251109_011825_687318_37f53dba
本地临时目录: /var/folders/w0/m02j_xv925sg34708rb2xgzr0000gn/T/gds_test_local_9omyw06y
测试环境设置完成
命令: 'echo "{\'name\': \'test03_json_echo_01\', \'value\': 123}" > ~/tmp/gds_test_20251109_011825_687318_37f53dba/correct_json.txt'
返回码: 0
输出: 
[DEBUG] verify_file_content_contains called:
  filename: ~/tmp/gds_test_20251109_011825_687318_37f53dba/correct_json.txt
  expected_content: "{'name': 'test03_json_echo_01', 'value': 123}"
  terminal_erase: False
命令: 'cat ~/tmp/gds_test_20251109_011825_687318_37f53dba/correct_json.txt'
返回码: 0
输出: {'name': 'test03_json_echo_01', 'value': 123}
[DEBUG] cat command result:
  returncode: 0
  stdout: "{'name': 'test03_json_echo_01', 'value': 123}\n"
  stderr: ''
[DEBUG] after processing:
  actual_content: "{'name': 'test03_json_echo_01', 'value': 123}\n"
  actual_content length: 46
命令: 'echo -e "Line1\nLine2\nLine3" > ~/tmp/gds_test_20251109_011825_687318_37f53dba/multiline.txt'
返回码: 0
输出: 
[DEBUG] verify_file_content_contains called:
  filename: ~/tmp/gds_test_20251109_011825_687318_37f53dba/multiline.txt
  expected_content: 'Line1\nLine2\nLine3'
  terminal_erase: False
命令: 'cat ~/tmp/gds_test_20251109_011825_687318_37f53dba/multiline.txt'
返回码: 0
输出: Line1
Line2
Line3
[DEBUG] cat command result:
  returncode: 0
  stdout: 'Line1\nLine2\nLine3\n'
  stderr: ''
[DEBUG] after processing:
  actual_content: 'Line1\nLine2\nLine3\n'
  actual_content length: 18
命令: 'echo "Echo stdout test content"'
返回码: 0
输出: Echo stdout test content
命令: 'echo "Content for local redirect"'
返回码: 0
输出: Content for local redirect
命令执行: python3 /Users/wukunhuan/.local/bin/GOOGLE_DRIVE.py --shell --no-direct-feedback "echo \"{'name': 'test03_json_echo_02', 'value': 123}\"" > /Users/wukunhuan/.local/bin/_UNITTEST/_TEMP/local_redirect.txt
返回码: 0
本地重定向文件内容: 
[K⏳ Waiting for result .........
[K
[K{'name': 'test03_json_echo_02', 'value': 123}

命令: 'ls ~/tmp/gds_test_20251109_011825_687318_37f53dba/local_redirect.txt'
返回码: 1
输出: ls: ~/tmp/gds_test_20251109_011825_687318_37f53dba/local_redirect.txt: No such file or directory
已清理文件: /Users/wukunhuan/.local/bin/_UNITTEST/_TEMP/local_redirect.txt
命令: 'cat > ~/tmp/gds_test_20251109_011825_687318_37f53dba/test_script.py << "EOF"\nimport json\nimport os\n\n# 切换到脚本所在目录\nscript_dir = os.path.dirname(os.path.abspath(__file__))\nos.chdir(script_dir)\n\n# 创建配置文件\nconfig = {\n    "name": "test_project",\n    "version": "1.0.0",\n    "debug": True\n}\n\nwith open("test_config.json", "w") as f:\n    json.dump(config, f, indent=2)\n\nprint(f\'Config created successfully\')\nprint(f\'Current files: {len(os.listdir())}\')\nEOF'
返回码: 0
输出: Heredoc detected, translating to: echo -e 'import json\nimport os\n\n# 切换到脚本所在目录\nscript_dir = os.path.dirname(os.path.abspath(__file__))\nos.chdir(script_dir)\n\n# 创建配置文件\nconfig = {\n    "name": "test_project",\n    "version": "1.0.0",\n    "debug": True\n}\n\nwith open("test_config.json", "w") as f:\n    json.dump(config, f, indent=2)\n\nprint(f'"'"'Config created successfully'"'"')\nprint(f'"'"'Current files: {len(os.listdir())}'"'"')' > ~/tmp/gds_test_20251109_011825_687318_37f53dba/test_script.py
命令: 'ls ~/tmp/gds_test_20251109_011825_687318_37f53dba/test_script.py'
返回码: 0
输出: ~/tmp/gds_test_20251109_011825_687318_37f53dba/test_script.py
🔄 检测到预期与实际不符（预期成功: False, 实际成功: True），准备重试...
命令: 'python ~/tmp/gds_test_20251109_011825_687318_37f53dba/test_script.py'
返回码: 1
输出: 
错误: File "/content/drive/MyDrive/REMOTE_ROOT/tmp/gds_test_20251109_011825_687318_37f53dba/test_script.py", line 9
    ame\: 	est_project\,
        ^
SyntaxError: unexpected character after line continuation character...
🔄 检测到预期与实际不符（预期成功: True, 实际成功: False），准备重试...
重试第1次...
返回码: 1
输出: 
错误: File "/content/drive/MyDrive/REMOTE_ROOT/tmp/gds_test_20251109_011825_687318_37f53dba/test_script.py", line 9
    ame\: 	est_project\,
        ^
SyntaxError: unexpected character after line continuation character...
🔄 检测到预期与实际不符（预期成功: True, 实际成功: False），准备重试...
重试第2次...
返回码: 1
输出: 
错误: File "/content/drive/MyDrive/REMOTE_ROOT/tmp/gds_test_20251109_011825_687318_37f53dba/test_script.py", line 9
    ame\: 	est_project\,
        ^
SyntaxError: unexpected character after line continuation character...
命令执行异常: 1 != 0 : 命令执行失败
